# apiserver/model_configuration.go
@@ -15,8 +15,20 @@ type Configuration struct {
 	// Internal identifier for the configured API (created automatically).
 	Id *int64 `json:"id,omitempty"`
 
-	// There should be things like API address, access keys and so on.
-	ApiAccessChangeMe string `json:"apiAccessChangeMe,omitempty"`
+	// Base URL for the API access
+	BaseUrl string `json:"baseUrl"`
+
+	// Client ID for API access
+	ClientId string `json:"clientId"`
+
+	// Set the client secret for API access
+	ClientSecret string `json:"clientSecret"`
+
+	// Login-URL to verify the access to the API
+	VerificationUri *string `json:"verificationUri,omitempty"`
+
+	// Optionally set the refresh token. If not provided, it will be automatically assigned during the authentication login process managed by the app.
+	RefreshToken *string `json:"refreshToken,omitempty"`
 
 	// Flag to enable or disable fetching from this API
 	Enable *bool `json:"enable,omitempty"`
@@ -27,24 +39,29 @@ type Configuration struct {
 	// Timeout in seconds
 	RequestTimeout *int32 `json:"requestTimeout,omitempty"`
 
-	// Array of rules combined by logical OR
-	AssetFilter [][]FilterRule `json:"assetFilter,omitempty"`
-
 	// Set to `true` by the app when running and to `false` when app is stopped
 	Active *bool `json:"active,omitempty"`
 
-	// List of Eliona project ids for which this device should collect data. For each project id all smart devices are automatically created as an asset in Eliona. The mapping between Eliona is stored as an asset mapping in the KentixONE app.
-	ProjectIDs *[]string `json:"projectIDs,omitempty"`
-
 	// ID of the last Eliona user who created or updated the configuration
 	UserId *string `json:"userId,omitempty"`
+
+	// ID of the project the Eliona user created or updated the configuration
+	ProjectId *string `json:"projectId,omitempty"`
 }
 
 // AssertConfigurationRequired checks if the required fields are not zero-ed
 func AssertConfigurationRequired(obj Configuration) error {
-	if err := AssertRecurseInterfaceRequired(obj.AssetFilter, AssertFilterRuleRequired); err != nil {
-		return err
+	elements := map[string]interface{}{
+		"baseUrl":      obj.BaseUrl,
+		"clientId":     obj.ClientId,
+		"clientSecret": obj.ClientSecret,
 	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
 	return nil
 }
 
